--- a/options.html
+++ b/options.html
@@ -14,7 +14,7 @@
     <div id="buttonDiv">
     </div>
     <div>
-      <p>Choose a different background color!</p>
+      <p>Hello World!</p>
     </div>
   </body>
   <script src="options.js"></script>
